登录态、页面刷新bug重写，已经完成
还有用户聊天功能未测试

--- a/PsychologicalEvaluation/src/main/webapp/style/reset.css
+++ b/PsychologicalEvaluation/src/main/webapp/style/reset.css
@@ -9,7 +9,7 @@ body {
     height: 100%;
     font-size: 14px;
     line-height: 1.8;
-    background: #fffffd url(../images/bg.jpg) center repeat;
+    background: #fffffd ;
 }
 
 body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,.nav-title {
